src/main/java/org/example/interpreter/error/VariableValueTypeInterpretingException.java
package org.example.interpreter.error;public class VariableValueTypeInterpretingException {
}
